force-app/main/default/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Lead Process Custom</fullName>
        <description>Lead Process Custom</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Converted</fullName>
        </values>
        <values>
            <fullName>Closed - Not Converted</fullName>
        </values>
        <values>
            <fullName>Open - Not Contacted</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working - Contacted</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AccountHolderName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Holder Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdditionalServices__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Services</label>
        <length>220</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssuFoyer__c</fullName>
        <label>Assu. Foyer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 Personne</fullName>
                </value>
                <value>
                    <fullName>2 Personnes</fullName>
                </value>
                <value>
                    <fullName>3 Personnes</fullName>
                </value>
                <value>
                    <fullName>4 Personnes et +</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AssuHabitation__c</fullName>
        <label>Assu. Habitation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maison</fullName>
                </value>
                <value>
                    <fullName>Appartement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AssuOffre__c</fullName>
        <label>Assu. Offre</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assurance Habitation</fullName>
                </value>
                <value>
                    <fullName>Alarme Sécurité</fullName>
                </value>
                <value>
                    <fullName>Assurance Hab. &amp; Sécu</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AssuResidence__c</fullName>
        <label>Assu. Résidence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Résidence Principal</fullName>
                </value>
                <value>
                    <fullName>Résidence Secondaire</fullName>
                </value>
                <value>
                    <fullName>Immobilier Locatif</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AssuSituationFamiliale__c</fullName>
        <label>Assu. Situation Familiale</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Célibataire</fullName>
                </value>
                <value>
                    <fullName>Marié</fullName>
                </value>
                <value>
                    <fullName>Divorcé</fullName>
                </value>
                <value>
                    <fullName>Séparé</fullName>
                </value>
                <value>
                    <fullName>Concubinage</fullName>
                </value>
                <value>
                    <fullName>Veuf</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BIC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BIC</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankMandateConfirmedDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bank Mandate Confirmed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BankMandateConfirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bank Mandate Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BankName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bank Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BundelPreference__c</fullName>
        <label>Bundel Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>COMPACT</fullName>
                </value>
                <value>
                    <fullName>COMFORT</fullName>
                </value>
                <value>
                    <fullName>PREMIUM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BundleVariant__c</fullName>
        <label>Bundle Variant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Basic</fullName>
                    <label>SuperSaver</label>
                </value>
                <value>
                    <fullName>Plus</fullName>
                    <label>SuperFlex</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Catégorie</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CompanyNotfound</fullName>
                    <label>Company not found</label>
                </value>
                <value>
                    <fullName>ExistingCustomer</fullName>
                    <label>Existing Customer</label>
                </value>
                <value>
                    <fullName>Existing email</fullName>
                </value>
                <value>
                    <fullName>Failed Credit Check</fullName>
                    <label>FailedCreditCheck</label>
                </value>
                <value>
                    <fullName>ManualCreditCheckRequired</fullName>
                    <label>Manual credit check required</label>
                </value>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>NormalCardOrderCreated</fullName>
                    <label>Normal, 1st card order created</label>
                </value>
                <value>
                    <fullName>NotFalconMobility</fullName>
                    <label>Not Falcon Mobility</label>
                </value>
                <value>
                    <fullName>PreClosed</fullName>
                    <label>Pre-Closed</label>
                </value>
                <value>
                    <fullName>ExistingProspect</fullName>
                    <label>Existing Prospect</label>
                </value>
                <value>
                    <fullName>CreditResultPending</fullName>
                    <label>Credit Result Pending</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CompanyShortName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Company Short Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailStatus__c</fullName>
        <label>Email Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Verification Failed</fullName>
                </value>
                <value>
                    <fullName>Verification Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmailValidUntil__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Valid Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EmailVerificationValidUntil__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Verification Valid Until</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EmailVerifiedAt__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Verified At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Estimatedfuelconsmonthlitre__c</fullName>
        <label>Estimated fuel cons. / month /litre</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IBAN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>IBAN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <encryptionScheme>None</encryptionScheme>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the member/lead</description>
        <encryptionScheme>None</encryptionScheme>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegalForm__c</fullName>
        <label>Legal Form</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>Behörde</fullName>
                </value>
                <value>
                    <fullName>e. V.</fullName>
                </value>
                <value>
                    <fullName>eG</fullName>
                </value>
                <value>
                    <fullName>Einzelfirma (e. K.)</fullName>
                </value>
                <value>
                    <fullName>Freie Berufe</fullName>
                </value>
                <value>
                    <fullName>gAG</fullName>
                </value>
                <value>
                    <fullName>GbR (BGB-Gesellschaft)</fullName>
                </value>
                <value>
                    <fullName>Gewerbebetrieb</fullName>
                </value>
                <value>
                    <fullName>gGmbH</fullName>
                </value>
                <value>
                    <fullName>GmbH</fullName>
                </value>
                <value>
                    <fullName>GmbH &amp; Co. KG</fullName>
                </value>
                <value>
                    <fullName>KG</fullName>
                </value>
                <value>
                    <fullName>KGaA</fullName>
                </value>
                <value>
                    <fullName>Limited (Ltd.)</fullName>
                </value>
                <value>
                    <fullName>OHG</fullName>
                </value>
                <value>
                    <fullName>Societas Europaea (SE)</fullName>
                </value>
                <value>
                    <fullName>Sonstiges</fullName>
                </value>
                <value>
                    <fullName>UG (haftungsbeschränkt)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NbFuelCardRequired__c</fullName>
        <label>Number fuel card Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pin__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pin</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <label>Primary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductInterest__c</fullName>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1000 series</fullName>
                </value>
                <value>
                    <fullName>GC5000 series</fullName>
                </value>
                <value>
                    <fullName>GC3000 series</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProduitAssurance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Produit Assurance</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.Family</field>
                <operation>equals</operation>
                <value>Assurance</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProduitSecurite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Produit Sécurité</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.Family</field>
                <operation>equals</operation>
                <value>Sécurité</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Leads (Produit Sécurité)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SICCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tax Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VATNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>VAT Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notContain</operation>
            <value>closed</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom1</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 1</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom2</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 2</label>
    </listViews>
    <recordTypes>
        <fullName>Main</fullName>
        <active>true</active>
        <businessProcess>Lead Process Custom</businessProcess>
        <label>Main</label>
    </recordTypes>
    <recordTypes>
        <fullName>POC</fullName>
        <active>true</active>
        <businessProcess>Lead Process Custom</businessProcess>
        <label>POC</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>LID__Check_CompanyId_Value</fullName>
        <active>false</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LeadConvertCheckContact</fullName>
        <active>false</active>
        <description>IsConverted</description>
        <errorConditionFormula>AND( IsConverted, or ( ISBLANK(Phone), ISBLANK(FirstName), ISBLANK(LastName)) )</errorConditionFormula>
        <errorMessage>Veuillez renseigner le contact avant de Convertir votre Lead.</errorMessage>
    </validationRules>
</CustomObject>